--- a/index.html
+++ b/index.html
@@ -30,27 +30,40 @@
             <img src="img/irio-char.png" alt="irio.png">
         </section>
 
-        <section>
+        <section id="sec3">
             <div>
                 <h2>Soluções</h2>
             </div>
-            <div>
-                <img src="img/et-industrial.png" alt="industrial.png">
-                <p>Elétrica Industrial</p>
-                <img src="img/et-residencial.png" alt="residencial.png">
-                <p>Elétrica Residencial</p>
-                <img src="img/fibra-optica.png" alt="fibra.png">
-                <p>Fibra Óptica</p>
-                <img src="img/wifi-premium.png" alt="wifi.png">
-                <p>Wifi Premium</p>
-                <img src="img/fios-aleatorios.png" alt="fios.png">
-                <p>Sla</p>
+            <div class="imgs">
+                <div id="img1">
+                    <p>Elétrica Industrial</p>
+                </div>
+                <div id="img2">
+                    <p>Elétrica Residencial</p>
+                </div>
+                <div id="img3">
+                    <p>Fibra Óptica</p>
+                </div>
+                <div id="img4">
+                    <p>Wifi Premium</p>
+                </div>
+                <div id="img5">
+                    <p>Sla</p>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <div id="hr">
+            <h3>Horário de atendimento</h3>
+            <p>Seg - Sex: 8h às 18h</p>
+            <p>Sabádo: 8h às 12h</p>
+        </div>
+        <div id="wpp">
+            <p>Whatsapp: (48) 99999-9999</p>
+            <p>Se estiver pelo desktop:</p>
+        </div>
     </footer>
 </body>
 </html>
